--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap'); 
 
 :root {
-    --primary-color: 
-    #7C3AED;
+    /* --primary-color: 
+    #7C3AED; */
+    --primary-color: #11AA3B;
     --dark-gray:#6B7280;
     --off-white: #F3F4F6;
 }
